--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,31 @@ header > div {
 #essentialText{
     font-size: 1rem;
     color: black;
-    margin: 10px; 
+    margin: 20px auto; 
+    max-width: 500px;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
-  
+#links{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+  .plans {
+    display: inline-block;
+    background-color: red;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px;
+    font-weight: bold;
+  }
+  .join {
+    color: black;
+    font-weight: bold;
+    padding: 10px 20px;
+  }
