--- a/styles.css
+++ b/styles.css
@@ -79,3 +79,40 @@ header > div {
     font-weight: bold;
     padding: 10px 20px;
   }
+  #bestOpen {
+    background-color: rgba(232,217,217,.3);
+    height: 600px;  
+  }
+  #triangle {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50;
+  }
+  #secondHeading{
+    background-color: rgba(255,204,53,.4);
+    transform: skew(9deg,0deg);
+    font-style: italic;
+    margin: auto;
+    max-width: fit-content;
+    font-size: 2.5rem;
+    color: black;
+    margin-bottom: 15px;
+    text-align: center;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #tool {
+    font-size: 1rem;
+    color: black;
+    margin: 20px auto; 
+    max-width: 500px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
